# what2do

./: .dockerignore  .gitignore  README.md  docker-compose.yaml
mysite/: Dockerfile  main.py  pyproject.toml  sql_app.db  test.db
mysite/apps/account/infra/: repository.py
mysite/apps/account/presentation/: api.py  request.py
mysite/apps/database/: connection.py  orm.py
mysite/apps/sql_app/: crud.py  database.py  models.py  orm.py  repository.py
mysite/apps/todo/: repository.py
mysite/apps/user/: api.py
mysite/apps/users/: api.py  apis.py  container.py  entity.py  query.py  repository.py  router.py
mysite/project/: alembic.ini  container.py  entrypoint.sh  main.py  pyproject.toml  pytest.ini  sql_app.db
mysite/project/alembic/: env.py
mysite/project/alembic/versions/: 9c3338e70c5f_initial_migration.py  a98de180ceb1_initial_migration.py
mysite/project/apps/: main.py
mysite/project/apps/database/: config.py  connection.py  orm.py
mysite/project/apps/news/: DriverHelper.py  NewsParser.py  api.py  command.py  container.py  main.py  main_click.py  news_parser.py  output.json  query.py  schema.py
mysite/project/apps/post/: api.py  command.py  container.py  query.py  repository.py  schema.py
mysite/project/domain/: entity.py
mysite/project/infra/: container.py
mysite/project/migrations/: env.py
mysite/project/presentation/: response.py
mysite/project/tests/: conftest.py
mysite/tests/: conftest.py  main.py
mysite/tests/functional/: test_todo.py
mysite/tests/integration/: conftest.py
mysite/tests/users/: test_apis.py
(+94 files in other folders)
