[tool.poetry]
name = "project"
version = "0.1.0"
description = ""
authors = ["yamkant <dev.yamkim@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.104.1"
uvicorn = "^0.24.0.post1"
sqlalchemy = "^2.0.23"
pytest = "^7.4.3"
httpx = "^0.25.1"
sqlalchemy-utils = "^0.41.1"
passlib = "^1.7.4"
python-multipart = "^0.0.6"
fastapi-jwt = "^0.2.0"
bcrypt = "^4.0.1"
pytest-mock = "^3.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
