[tool.poetry]
name = "project"
version = "0.1.0"
description = ""
authors = ["yamkant <dev.yamkim@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.104.1"
uvicorn = "^0.24.0.post1"
sqlalchemy = "^2.0.23"
pytest = "^7.4.3"
httpx = "^0.25.1"
sqlalchemy-utils = "^0.41.1"
passlib = "^1.7.4"
python-multipart = "^0.0.6"
fastapi-jwt = "^0.2.0"
bcrypt = "^4.0.1"
pytest-mock = "^3.12.0"
pytz = "^2023.3.post1"
dependency-injector = "^4.41.0"
schema = "^0.7.5"
requests = "^2.31.0"
bs4 = "^0.0.1"
selenium = "^4.15.2"
screeninfo = "^0.8.1"
alembic = "^1.12.1"
pydantic-settings = "^2.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
